# Proyecto-I-SergioRiosC-Proyecto-1-VSCode-Memory-Manager

./: CMakeCache.txt  CMakeLists.txt  Cliente.cpp  Cliente.json  GarbageCollector.cpp  GarbageCollector.hpp  Lista.hpp  Makefile  Proyecto1_Datos2  README.md  Server.cpp  VSPtr.hpp  index.html  main  main.cpp  md5.h  prueba.json
JSONFiles/: prueba.json
SRV/: SRV  Server.cpp
html/: _garbage_collector_8hpp_source.html  _lista_8hpp_source.html  _v_s_ptr_8hpp_source.html  annotated.html  class_cliente-members.html  class_cliente.html  class_collector-members.html  class_collector.html  class_lista-members.html  class_lista.html  class_m_d5-members.html  class_m_d5.html  class_nodo-members.html  class_nodo.html  class_v_s_p_t_r-members.html  class_v_s_p_t_r.html  classes.html  doxygen_log.txt  files.html  functions.html  functions_func.html  md5_8h_source.html  menudata.js
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  searchdata.js
latex/: annotated.tex  class_cliente.tex  class_collector.tex  class_lista.tex  class_m_d5.tex  class_nodo.tex  class_v_s_p_t_r.tex  refman.tex
